[package]
name = "jitevm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hex = { version = "0.4" }
bytes = { version = "1.1" }
primitive-types = "0.11.1"
eyre = "0.6.8"
thiserror = "1.0.31"
inkwell = { git = "https://github.com/TheDan64/inkwell", branch = "master", features = ["llvm14-0"] }
itertools = "0.10.3"
revm = "1.7.0"

[patch.crates-io]
# revm = { git = 'https://github.com/joachimneu/revm-hacking1' }
revm = { path = '../revm-hacking1/crates/revm' }
